kubernetes/oci/compute/cluster/.argocd-state/argocd/argo-cd/templates/dex/service.yaml
---
# Source: argo-cd/templates/dex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-dex-server
  namespace: argocd
  labels:
    helm.sh/chart: argo-cd-10.10.1
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: dex-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v3.5.4"
spec:  
  ports:
  - name: http
    protocol: TCP
    port: 5556
    targetPort: http
  - name: grpc
    protocol: TCP
    port: 5557
    targetPort: grpc
  - name: http-metrics
    protocol: TCP
    port: 5558
    targetPort: metrics
  selector:
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/instance: argocd
